cli code updates

--- a/packages/@jeli/compiler/package.json
+++ b/packages/@jeli/compiler/package.json
@@ -5,6 +5,7 @@
     "directories": {
         "test": "test"
     },
+    "main": "lib/index.js",
     "scripts": {
         "test": "mocha --reporter spec"
     },
