--- a/packages/@jeli/cli-utils/package.json
+++ b/packages/@jeli/cli-utils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jeli/cli-utils",
-    "version": "0.0.1",
+    "version": "0.0.0-PLACEHOLDER",
     "main": "./index.js",
     "dependencies": {
         "colors": "^1.3.3",
