--- a/packages/@jeli/cli/package.json
+++ b/packages/@jeli/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jeli/cli",
-    "version": "0.0.1",
+    "version": "0.0.0-PLACEHOLDER",
     "description": "Command line interface for jeli-js",
     "scripts": {
         "test": "mocha --reporter spec"
@@ -33,8 +33,8 @@
         "shelljs": "0.8.3",
         "envinfo": "^7.5.0",
         "execa": "^4.0.0",
-        "@jeli/cli-dev": "0.0.1",
-        "@jeli/cli-utils": "0.0.1"
+        "@jeli/cli-dev": "0.0.0-PLACEHOLDER",
+        "@jeli/cli-utils": "0.0.0-PLACEHOLDER"
     },
     "bin": {
         "jeli": "bin/jeli.js"
