--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "packages/@jeli/*"
     ],
     "scripts": {
-        "test": "echo \"error: no test specified\" && exit 1"
+        "test": "echo \"error: no test specified\" && exit 1",
+        "release": "yarn --pure-lockfile &&  node scripts/release.js"
     },
     "keywords": [
         "jeli-cli"
@@ -48,5 +49,8 @@
         "esprima": "^4.0.1",
         "html-dom-parser": "^0.2.2",
         "escodegen": "^1.12.0"
+    },
+    "dependencies": {
+        "request-promise-native": "^1.0.9"
     }
 }
