--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "espree": "^6.1.2",
         "esprima": "^4.0.1",
         "html-dom-parser": "^0.2.2",
-        "escodegen": "^1.12.0"
+        "escodegen": "2.0.0"
     },
     "dependencies": {
         "request-promise-native": "^1.0.9"
