--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "keywords": [
         "jeli-cli"
     ],
-    "devependencies": {
+    "devDependencies": {
         "atob": "^2.0.3",
         "body-parser": "^1.18.2",
         "btoa": "^1.1.2",
@@ -47,8 +47,9 @@
         "mocha": "^8.4.0",
         "espree": "^6.1.2",
         "esprima": "^4.0.1",
-        "html-dom-parser": "^0.2.2",
-        "escodegen": "2.0.0"
+        "html-dom-parser": "^3.1.2",
+        "escodegen": "2.0.0",
+        "connect":"^3.7.0"
     },
     "dependencies": {
         "request-promise-native": "^1.0.9"
