--- a/packages/@jeli/compiler/package.json
+++ b/packages/@jeli/compiler/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jeli/compiler",
-    "version": "0.0.0-PLACEHOLDER",
+    "version": "1.0.0",
     "description": "jeli-js compiler",
     "directories": {
         "test": "test"
@@ -28,11 +28,11 @@
     },
     "dependencies": {
         "esprima": "^4.0.1",
-        "html-dom-parser": "^0.2.2",
+        "html-dom-parser": "^3.1.2",
         "escodegen": "^2.0.0",
         "uglify-js": "^3.6.0",
         "lodash.template": "^4.5.0",
-        "@jeli/cli-utils": "0.0.0-PLACEHOLDER",
+        "@jeli/cli-utils": "1.0.0",
         "css": "^3.0.0",
         "node-sass": "^7.0.3"
     },
