--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
         "esprima": "^4.0.1",
         "html-dom-parser": "^3.1.2",
         "escodegen": "2.0.0",
-        "connect":"^3.7.0"
+        "connect":"^3.7.0",
+        "globby": "^13.1.3"
     },
     "dependencies": {
-        "request-promise-native": "^1.0.9"
+        "request-promise-native": "^1.0.9",
+        "request": "2.88.2"
     }
 }
