--- a/packages/@jeli/cli-utils/package.json
+++ b/packages/@jeli/cli-utils/package.json
@@ -2,6 +2,9 @@
   "name": "@jeli/cli-utils",
   "version": "1.0.1",
   "main": "./index.js",
+  "files": [
+    "*.js"
+  ],
   "dependencies": {
     "colors": "^1.4.0",
     "chalk": "^5.2.0",
