--- a/package.json
+++ b/package.json
@@ -1,59 +1,59 @@
 {
-    "name": "jeli-cli",
-    "version": "1.0.0",
-    "description": "jeli-cli",
-    "private": true,
-    "workspaces": [
-        "packages/@jeli/*"
-    ],
-    "scripts": {
-        "test": "node scripts/test.runner.js",
-        "release": "yarn --pure-lockfile &&  node scripts/release.js"
-    },
-    "keywords": [
-        "jeli-cli"
-    ],
-    "devDependencies": {
-        "atob": "^2.0.3",
-        "body-parser": "^1.18.2",
-        "btoa": "^1.1.2",
-        "chalk": "^2.3.0",
-        "clear": "0.0.1",
-        "clui": "^0.3.6",
-        "commander": "^2.20.3",
-        "console-clear": "^1.1.1",
-        "figlet": "^1.2.0",
-        "fs-extra": "~2.0.0",
-        "inquirer": "^4.0.1",
-        "jsonfile": "^3.0.0",
-        "leven": "^3.1.0",
-        "lodash": "^4.17.4",
-        "minimist": "^1.2.0",
-        "preferences": "^1.0.2",
-        "semver": "^7.2.2",
-        "touch": "^3.1.0",
-        "validate-npm-package-name": "^3.0.0",
-        "http-server": "^0.12.1",
-        "basic-auth": "^1.0.3",
-        "colors": "^1.3.3",
-        "corser": "^2.0.1",
-        "ecstatic": "^3.3.2",
-        "http-proxy": "^1.17.0",
-        "opener": "^1.5.1",
-        "optimist": "~0.6.1",
-        "portfinder": "^1.0.20",
-        "secure-compare": "3.0.1",
-        "union": "~0.5.0",
-        "mocha": "^8.4.0",
-        "espree": "^6.1.2",
-        "esprima": "^4.0.1",
-        "html-dom-parser": "^3.1.2",
-        "escodegen": "2.0.0",
-        "connect":"^3.7.0",
-        "globby": "^13.1.3"
-    },
-    "dependencies": {
-        "request-promise-native": "^1.0.9",
-        "request": "2.88.2"
-    }
+  "name": "jeli-cli",
+  "version": "0.0.1",
+  "description": "jeli-cli",
+  "private": true,
+  "workspaces": [
+    "packages/@jeli/*"
+  ],
+  "scripts": {
+    "test": "node scripts/test.runner.js",
+    "release": "node scripts/release.js"
+  },
+  "keywords": [
+    "jeli-cli"
+  ],
+  "devDependencies": {
+    "atob": "^2.0.3",
+    "body-parser": "^1.18.2",
+    "btoa": "^1.1.2",
+    "chalk": "^2.3.0",
+    "clear": "0.0.1",
+    "clui": "^0.3.6",
+    "commander": "^2.20.3",
+    "console-clear": "^1.1.1",
+    "figlet": "^1.2.0",
+    "fs-extra": "~2.0.0",
+    "inquirer": "^4.0.1",
+    "jsonfile": "^3.0.0",
+    "leven": "^3.1.0",
+    "lodash": "^4.17.4",
+    "minimist": "^1.2.0",
+    "preferences": "^1.0.2",
+    "semver": "^7.2.2",
+    "touch": "^3.1.0",
+    "validate-npm-package-name": "^3.0.0",
+    "http-server": "^0.12.1",
+    "basic-auth": "^1.0.3",
+    "colors": "^1.3.3",
+    "corser": "^2.0.1",
+    "ecstatic": "^3.3.2",
+    "http-proxy": "^1.17.0",
+    "opener": "^1.5.1",
+    "optimist": "~0.6.1",
+    "portfinder": "^1.0.20",
+    "secure-compare": "3.0.1",
+    "union": "~0.5.0",
+    "mocha": "^8.4.0",
+    "espree": "^6.1.2",
+    "esprima": "^4.0.1",
+    "html-dom-parser": "^3.1.2",
+    "escodegen": "2.0.0",
+    "connect": "^3.7.0",
+    "globby": "^13.1.3"
+  },
+  "dependencies": {
+    "request-promise-native": "^1.0.9",
+    "request": "2.88.2"
+  }
 }
