--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "jeli-cli",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "jeli-cli",
   "private": true,
   "workspaces": [
-    "packages/@jeli/*"
+    "packages/*"
   ],
   "scripts": {
     "test": "node scripts/test.runner.js",
