--- a/packages/cli/templates/default/package.json
+++ b/packages/cli/templates/default/package.json
@@ -12,13 +12,12 @@
     "author": "[AUTHOR]",
     "license": "[LICENSE]",
     "dependencies": {
-        "@jeli/cli": "latest",
-        "@jeli/core": "latest"
+        "@jeli/cli": "[CLIVERSION]",
+        "@jeli/core": "[CLIVERSION]"
     },
     "devDependencies": {
-        "@jeli/cli-dev": "latest",
-        "@jeli/compiler": "latest",
-        "@jeli/js-helpers": "^0.0.1",
+        "@jeli/dev-cli": "[CLIVERSION]",
+        "@jeli/compiler-cli": "[CLIVERSION]",
         "jest": "^25.4.0",
         "eslint": "^6.8.0",
         "eslint-config-standard": "^14.1.0",
