--- a/packages/compiler-cli/package.json
+++ b/packages/compiler-cli/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "esprima": "^4.0.1",
+    "espree":"^10.0.1",
     "html-dom-parser": "^3.1.6",
     "escodegen": "^2.0.0",
     "uglify-js": "^3.17.4",
